--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-.body {
-    font-family: "Lato", sans-serif;
+#body {
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #cities {
@@ -16,10 +16,19 @@
     border: solid 5px rgb(3, 1, 65);
 }
 
-#logo {
-    color: white;
+#heading {
     margin: 5px;
-    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+h3 {
+    margin: 5px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+#presetCities{
+    margin: 10px;
+    cursor: pointer;
 }
 
 #weather {
